--- a/modal_gradio.ipynb
+++ b/modal_gradio.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1GR4CBhwEVfzZHIOk6SZsCP6vFs0yjYWp",
-      "authorship_tag": "ABX9TyP8JMHmV+poJQAoNkceT/D1",
+      "authorship_tag": "ABX9TyPxsTvO+mT4NSPSUXYBoAB4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,8 @@
       "cell_type": "markdown",
       "source": [
         "# Gradio app: Dev in Notebook, Deployment to Modal\n",
+        "\n",
+        "__This is a copy of https://github.com/aknip/Streamlit-Gradio/blob/main/modal_gradio.ipynb__\n",
         "\n",
         "This notebook shows how to develop a Gradio app in a notebook.\n",
         "The app then can be automatically deployed to Modal.com.\n",
