--- a/vllm_llama-2-13b.ipynb
+++ b/vllm_llama-2-13b.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1GR4CBhwEVfzZHIOk6SZsCP6vFs0yjYWp",
-      "authorship_tag": "ABX9TyMnuduQLjf5odeC7BKVN7O6",
+      "authorship_tag": "ABX9TyMvwl3SRu05ruasRnPN/VXe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,6 +70,15 @@
         "%%capture --no-stderr\n",
         "!pip install modal nbdev -q"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FNNCxljKt7Ux"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -308,12 +317,12 @@
       "cell_type": "markdown",
       "source": [
         "# Check URL in Browser\n",
-        "https://aknip--vllm-fastapi-app-dev.modal.run/docs\n",
+        "https://xxx-app-dev.modal.run/docs\n",
         "\n",
         "# Send POST via Terminal\n",
         "```\n",
         "curl -X 'POST' \\\n",
-        "  'https://aknip--vllm-fastapi-app-dev.modal.run' \\\n",
+        "  'https://xxx-app-dev.modal.run' \\\n",
         "  -H 'accept: application/json' \\\n",
         "  -H 'Content-Type: application/json' \\\n",
         "  -d '{\n",
@@ -323,7 +332,7 @@
         "      \"Evelyn, 25, and Jacob, 29, are part of the records, along with Abigail, 27, Liam, 32, and Harper, 26.\"\n",
         "   ]\n",
         "}'\n",
-        "``"
+        "```"
       ],
       "metadata": {
         "id": "1xwHOXPutav1"
