--- a/vllm_mistral-7b.ipynb
+++ b/vllm_mistral-7b.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1GR4CBhwEVfzZHIOk6SZsCP6vFs0yjYWp",
-      "authorship_tag": "ABX9TyOPuB8E2D3UXs474cjUhitt",
+      "authorship_tag": "ABX9TyM8ADsikafe+BqPsEyncfE5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,17 +59,18 @@
       "metadata": {
         "id": "HBQ9fzwbCTrr"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "uzJ0fadPQW5V"
       },
       "outputs": [],
       "source": [
+        "%%capture --no-stderr\n",
         "!pip install modal nbdev -q"
       ]
     },
@@ -89,9 +90,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e2a2152e-dc4f-4055-f6c7-e5b97759a7c3"
+        "outputId": "5dc3d411-35ce-4938-cec8-eb18a5a3d61b"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "name": "stdout",
@@ -112,7 +113,7 @@
       "metadata": {
         "id": "E9abYug6TRcR"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -265,10 +266,22 @@
         "    return app"
       ],
       "metadata": {
-        "id": "zwGtQVHTuNrU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zwGtQVHTuNrU",
+        "outputId": "ac7fbb56-8255-40fb-b37e-e988669f97ee"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing vllm_mistral-7b-api.py\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -283,7 +296,7 @@
       "cell_type": "code",
       "source": [
         "# Serve\n",
-        "!modal vllm_mistral-7b-api.py"
+        "!modal serve vllm_mistral-7b-api.py"
       ],
       "metadata": {
         "id": "Z4nUD5Wuui8i"
