--- a/vllm_mistral-7b_FAST-API.ipynb
+++ b/vllm_mistral-7b_FAST-API.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1GR4CBhwEVfzZHIOk6SZsCP6vFs0yjYWp",
-      "authorship_tag": "ABX9TyM8ADsikafe+BqPsEyncfE5",
+      "authorship_tag": "ABX9TyNTf2M4rsBxseQ87Mnuxyhv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,13 +24,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/aknip/Modal/blob/main/vllm_mistral-7b.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/aknip/Modal/blob/main/vllm_mistral-7b_FAST-API.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# VLLM Mistral 7B Model\n",
+        "# VLLM Mistral 7B Model - via API and command line\n",
         "\n",
         "2 Examples:\n",
         "- Run as API\n",
@@ -59,12 +59,12 @@
       "metadata": {
         "id": "HBQ9fzwbCTrr"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "uzJ0fadPQW5V"
       },
@@ -92,7 +92,7 @@
         },
         "outputId": "5dc3d411-35ce-4938-cec8-eb18a5a3d61b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "E9abYug6TRcR"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -272,7 +272,7 @@
         "id": "zwGtQVHTuNrU",
         "outputId": "ac7fbb56-8255-40fb-b37e-e988669f97ee"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
